--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
     <div class="product_section">
     <div class="headingrow">
       <h2>Dairy, Bread & Eggs</h2>
+      <a>see all</a>
     </div>
     <div class="productrow">
     <div class="product_items">
@@ -228,5 +229,229 @@
     </div>
     </div>
   </section>
+  <section>
+    <div class="product_section">
+    <div class="headingrow">
+      <h2>Snacks & Munchies</h2>
+      <a>see all</a>
+    </div>
+    <div class="productrow">
+    <div class="product_items">
+      <div class="product_img">
+      <img src="/images/4a2d5e14-4425-4d2d-8958-6d51c6fd73d9.png" width="80%"/>
+      <p>
+      <img src="/images/15-mins.png" width="15px"/>        
+        18 mins
+        </p>
+      </div>
+      <div class="productcontent">
+        <h3>! Foods Gluten Free Millet Ragi Chips Healthy Snacks</h3>
+        <p>75 g</p>
+        <div class="btn-price-outer">
+          <b>₹99</b>
+          <button>ADD</button>
+        </div>
+      </div>
+    </div>
+    <div class="product_items">
+      <div class="product_img">
+      <img src="/images/2a55bb8b-bf09-454b-9233-cc00404c6a5c.png" width="80%"/>
+      <p>
+      <img src="/images/15-mins.png" width="15px"/>        
+        18 mins
+        </p>
+      </div>
+      <div class="productcontent">
+        <h3>Beanly Choco Hazelnut Spread with Breadsticks</h3>
+        <p>52 g</p>
+        <div class="btn-price-outer">
+          <b>₹84</b>
+          <button>ADD</button>
+        </div>
+      </div>
+    </div>   
+    <div class="product_items">
+      <div class="product_img">
+        <img src="/images/3eae3870-eb2a-43eb-ad30-967d17f7d691.png" width="80%" />
+        <p>
+          <img src="/images/15-mins.png" width="15px" />
+          18 mins
+        </p>
+      </div>
+      <div class="productcontent">
+        <h3>Protein Chef Baked Coated Peanuts (Masala Snacks)</h3>
+        <p>50 g</p>
+        <div class="btn-price-outer">
+          <b>₹50</b>
+          <button>ADD</button>
+        </div>
+      </div>
+    </div>   
+    <div class="product_items">
+      <div class="product_img">
+        <img src="/images/c6495b18-3b34-4687-8ff4-bd07b6c5a984.png" width="80%" />
+        <p>
+          <img src="/images/15-mins.png" width="15px" />
+          18 mins
+        </p>
+      </div>
+      <div class="productcontent">
+        <h3>Kab's Jackpot Chilli Lemon Stix Crisps snaks</h3>
+        <p>80 g</p>
+        <div class="btn-price-outer">
+          <b>₹60</b>
+          <button>ADD</button>
+        </div>
+      </div>
+    </div>
+    <div class="product_items">
+      <div class="product_img">
+        <img src="/images/c9db4298-29bf-4536-b5f3-06dadbd50130.png" width="80%" />
+        <p>
+          <img src="/images/15-mins.png" width="15px" />
+          18 mins
+        </p>
+      </div>
+      <div class="productcontent">
+        <h3>Protein Chef Baked Bikaneri Bhujia Sev (Healthy Namkeen)</h3>
+        <p>80 g</p>
+        <div class="btn-price-outer">
+          <b>₹93</b>
+          <button>ADD</button>
+        </div>
+      </div>
+    </div>
+    <div class="product_items">
+      <div class="product_img">
+        <img src="/images/e726d2de-4fdd-4fc3-b314-11017932a1d2.png" width="80%" />
+        <p>
+          <img src="/images/15-mins.png" width="15px" />
+           20 mins
+        </p>
+      </div>
+      <div class="productcontent">
+        <h3>Nongshim Shrimp Flavoured Hot & Spicy Crackers Chips</h3>
+        <p>75 g</p>
+        <div class="btn-price-outer">
+          <b>₹124</b>
+          <button>ADD</button>
+        </div>
+      </div>
+    </div>    
+    </div>
+    </div>
+  </section>  
+  <section>
+    <div class="product_section">
+    <div class="headingrow">
+      <h2>Snacks & Munchies</h2>
+      <a>see all</a>
+    </div>
+    <div class="productrow">
+    <div class="product_items">
+      <div class="product_img">
+      <img src="/images/4a2d5e14-4425-4d2d-8958-6d51c6fd73d9.png" width="80%"/>
+      <p>
+      <img src="/images/15-mins.png" width="15px"/>        
+        18 mins
+        </p>
+      </div>
+      <div class="productcontent">
+        <h3>! Foods Gluten Free Millet Ragi Chips Healthy Snacks</h3>
+        <p>75 g</p>
+        <div class="btn-price-outer">
+          <b>₹99</b>
+          <button>ADD</button>
+        </div>
+      </div>
+    </div>
+    <div class="product_items">
+      <div class="product_img">
+      <img src="/images/2a55bb8b-bf09-454b-9233-cc00404c6a5c.png" width="80%"/>
+      <p>
+      <img src="/images/15-mins.png" width="15px"/>        
+        18 mins
+        </p>
+      </div>
+      <div class="productcontent">
+        <h3>Beanly Choco Hazelnut Spread with Breadsticks</h3>
+        <p>52 g</p>
+        <div class="btn-price-outer">
+          <b>₹84</b>
+          <button>ADD</button>
+        </div>
+      </div>
+    </div>   
+    <div class="product_items">
+      <div class="product_img">
+        <img src="/images/3eae3870-eb2a-43eb-ad30-967d17f7d691.png" width="80%" />
+        <p>
+          <img src="/images/15-mins.png" width="15px" />
+          18 mins
+        </p>
+      </div>
+      <div class="productcontent">
+        <h3>Protein Chef Baked Coated Peanuts (Masala Snacks)</h3>
+        <p>50 g</p>
+        <div class="btn-price-outer">
+          <b>₹50</b>
+          <button>ADD</button>
+        </div>
+      </div>
+    </div>   
+    <div class="product_items">
+      <div class="product_img">
+        <img src="/images/c6495b18-3b34-4687-8ff4-bd07b6c5a984.png" width="80%" />
+        <p>
+          <img src="/images/15-mins.png" width="15px" />
+          18 mins
+        </p>
+      </div>
+      <div class="productcontent">
+        <h3>Kab's Jackpot Chilli Lemon Stix Crisps snaks</h3>
+        <p>80 g</p>
+        <div class="btn-price-outer">
+          <b>₹60</b>
+          <button>ADD</button>
+        </div>
+      </div>
+    </div>
+    <div class="product_items">
+      <div class="product_img">
+        <img src="/images/c9db4298-29bf-4536-b5f3-06dadbd50130.png" width="80%" />
+        <p>
+          <img src="/images/15-mins.png" width="15px" />
+          18 mins
+        </p>
+      </div>
+      <div class="productcontent">
+        <h3>Protein Chef Baked Bikaneri Bhujia Sev (Healthy Namkeen)</h3>
+        <p>80 g</p>
+        <div class="btn-price-outer">
+          <b>₹93</b>
+          <button>ADD</button>
+        </div>
+      </div>
+    </div>
+    <div class="product_items">
+      <div class="product_img">
+        <img src="/images/e726d2de-4fdd-4fc3-b314-11017932a1d2.png" width="80%" />
+        <p>
+          <img src="/images/15-mins.png" width="15px" />
+           20 mins
+        </p>
+      </div>
+      <div class="productcontent">
+        <h3>Nongshim Shrimp Flavoured Hot & Spicy Crackers Chips</h3>
+        <p>75 g</p>
+        <div class="btn-price-outer">
+          <b>₹124</b>
+          <button>ADD</button>
+        </div>
+      </div>
+    </div>    
+    </div>
+    </div>
+  </section>    
 </body>
 </html>
