--- a/index.html
+++ b/index.html
@@ -344,108 +344,108 @@
   <section>
     <div class="product_section">
     <div class="headingrow">
-      <h2>Snacks & Munchies</h2>
+      <h2>Cold Drinks & Juices</h2>
       <a>see all</a>
     </div>
     <div class="productrow">
     <div class="product_items">
       <div class="product_img">
-      <img src="/images/4a2d5e14-4425-4d2d-8958-6d51c6fd73d9.png" width="80%"/>
+      <img src="/images/e142d3d3-99fd-4f7b-a778-91875ae3ff72.png" width="80%"/>
       <p>
       <img src="/images/15-mins.png" width="15px"/>        
-        18 mins
+        20 mins
         </p>
       </div>
       <div class="productcontent">
-        <h3>! Foods Gluten Free Millet Ragi Chips Healthy Snacks</h3>
-        <p>75 g</p>
+        <h3>Mother Dairy Tadka Salted Buttermilk</h3>
+        <p>270 ml</p>
         <div class="btn-price-outer">
-          <b>₹99</b>
+          <b>₹10</b>
           <button>ADD</button>
         </div>
       </div>
     </div>
     <div class="product_items">
       <div class="product_img">
-      <img src="/images/2a55bb8b-bf09-454b-9233-cc00404c6a5c.png" width="80%"/>
+      <img src="/images/6834c88e-a97d-44cc-8c41-273f5f39c5eb.png" width="80%"/>
       <p>
       <img src="/images/15-mins.png" width="15px"/>        
-        18 mins
+        20 mins
         </p>
       </div>
       <div class="productcontent">
-        <h3>Beanly Choco Hazelnut Spread with Breadsticks</h3>
-        <p>52 g</p>
+        <h3>Coca-Cola Soft Drink (750 ml)</h3>
+        <p>750 ml</p>
         <div class="btn-price-outer">
-          <b>₹84</b>
+          <b>₹40</b>
           <button>ADD</button>
         </div>
       </div>
     </div>   
     <div class="product_items">
       <div class="product_img">
-        <img src="/images/3eae3870-eb2a-43eb-ad30-967d17f7d691.png" width="80%" />
+        <img src="/images/5e11f284-6d96-4928-a07d-0860fce03c8e.png" width="80%" />
         <p>
           <img src="/images/15-mins.png" width="15px" />
-          18 mins
+          20 mins
         </p>
       </div>
       <div class="productcontent">
-        <h3>Protein Chef Baked Coated Peanuts (Masala Snacks)</h3>
-        <p>50 g</p>
+        <h3>Bisleri Packaged Water</h3>
+        <p>10 ltr</p>
         <div class="btn-price-outer">
-          <b>₹50</b>
+          <b>₹107</b>
           <button>ADD</button>
         </div>
       </div>
     </div>   
     <div class="product_items">
       <div class="product_img">
-        <img src="/images/c6495b18-3b34-4687-8ff4-bd07b6c5a984.png" width="80%" />
+        <img src="/images/50fff979-bb8f-455a-a3a6-cf1305b18700.png" width="80%" />
         <p>
           <img src="/images/15-mins.png" width="15px" />
-          18 mins
+          20 mins
         </p>
       </div>
       <div class="productcontent">
-        <h3>Kab's Jackpot Chilli Lemon Stix Crisps snaks</h3>
-        <p>80 g</p>
+        <h3>Limca Lemon 'N' Lime Soft Drink</h3>
+        <p>750 ml</p>
         <div class="btn-price-outer">
-          <b>₹60</b>
+          <b>₹40</b>
           <button>ADD</button>
         </div>
       </div>
     </div>
     <div class="product_items">
       <div class="product_img">
-        <img src="/images/c9db4298-29bf-4536-b5f3-06dadbd50130.png" width="80%" />
+        <img src="/images/6771100f-3fad-40fb-80ff-4781de705832.png" width="80%" />
         <p>
           <img src="/images/15-mins.png" width="15px" />
-          18 mins
+          20 mins
         </p>
       </div>
       <div class="productcontent">
-        <h3>Protein Chef Baked Bikaneri Bhujia Sev (Healthy Namkeen)</h3>
-        <p>80 g</p>
+        <h3>Coca-Cola Diet Coke Soft Drink</h3>
+        <p>300 ml</p>
         <div class="btn-price-outer">
-          <b>₹93</b>
+          <b>₹40</b>
           <button>ADD</button>
         </div>
       </div>
     </div>
     <div class="product_items">
       <div class="product_img">
-        <img src="/images/e726d2de-4fdd-4fc3-b314-11017932a1d2.png" width="80%" />
+        <img src="/images/2faf253a-7e5b-4d53-9774-350add8d50b5.png" width="80%" />
         <p>
           <img src="/images/15-mins.png" width="15px" />
            20 mins
         </p>
       </div>
       <div class="productcontent">
-        <h3>Nongshim Shrimp Flavoured Hot & Spicy Crackers Chips</h3>
-        <p>75 g</p>
+        <h3>Bisleri Packaged Water (1 l)</h3>
+        <p>1 ltr</p>
         <div class="btn-price-outer">
-          <b>₹124</b>
+          <b>₹18</b>
           <button>ADD</button>
         </div>
       </div>
@@ -453,5 +453,117 @@
     </div>
     </div>
   </section>    
+  <section>
+    <div class="product_section">
+      <div class="headingrow">
+        <h2>Candies & Gums</h2>
+        <a>see all</a>
+      </div>
+      <div class="productrow">
+        <div class="product_items">
+          <div class="product_img">
+            <img src="/images/e142d3d3-99fd-4f7b-a778-91875ae3ff72.png" width="80%" />
+            <p>
+              <img src="/images/15-mins.png" width="15px" />
+              20 mins
+            </p>
+          </div>
+          <div class="productcontent">
+            <h3>Mother Dairy Tadka Salted Buttermilk</h3>
+            <p>270 ml</p>
+            <div class="btn-price-outer">
+              <b>₹10</b>
+              <button>ADD</button>
+            </div>
+          </div>
+        </div>
+        <div class="product_items">
+          <div class="product_img">
+            <img src="/images/6834c88e-a97d-44cc-8c41-273f5f39c5eb.png" width="80%" />
+            <p>
+              <img src="/images/15-mins.png" width="15px" />
+              20 mins
+            </p>
+          </div>
+          <div class="productcontent">
+            <h3>Coca-Cola Soft Drink (750 ml)</h3>
+            <p>750 ml</p>
+            <div class="btn-price-outer">
+              <b>₹40</b>
+              <button>ADD</button>
+            </div>
+          </div>
+        </div>
+        <div class="product_items">
+          <div class="product_img">
+            <img src="/images/5e11f284-6d96-4928-a07d-0860fce03c8e.png" width="80%" />
+            <p>
+              <img src="/images/15-mins.png" width="15px" />
+              20 mins
+            </p>
+          </div>
+          <div class="productcontent">
+            <h3>Bisleri Packaged Water</h3>
+            <p>10 ltr</p>
+            <div class="btn-price-outer">
+              <b>₹107</b>
+              <button>ADD</button>
+            </div>
+          </div>
+        </div>
+        <div class="product_items">
+          <div class="product_img">
+            <img src="/images/50fff979-bb8f-455a-a3a6-cf1305b18700.png" width="80%" />
+            <p>
+              <img src="/images/15-mins.png" width="15px" />
+              20 mins
+            </p>
+          </div>
+          <div class="productcontent">
+            <h3>Limca Lemon 'N' Lime Soft Drink</h3>
+            <p>750 ml</p>
+            <div class="btn-price-outer">
+              <b>₹40</b>
+              <button>ADD</button>
+            </div>
+          </div>
+        </div>
+        <div class="product_items">
+          <div class="product_img">
+            <img src="/images/6771100f-3fad-40fb-80ff-4781de705832.png" width="80%" />
+            <p>
+              <img src="/images/15-mins.png" width="15px" />
+              20 mins
+            </p>
+          </div>
+          <div class="productcontent">
+            <h3>Coca-Cola Diet Coke Soft Drink</h3>
+            <p>300 ml</p>
+            <div class="btn-price-outer">
+              <b>₹40</b>
+              <button>ADD</button>
+            </div>
+          </div>
+        </div>
+        <div class="product_items">
+          <div class="product_img">
+            <img src="/images/2faf253a-7e5b-4d53-9774-350add8d50b5.png" width="80%" />
+            <p>
+              <img src="/images/15-mins.png" width="15px" />
+              20 mins
+            </p>
+          </div>
+          <div class="productcontent">
+            <h3>Bisleri Packaged Water (1 l)</h3>
+            <p>1 ltr</p>
+            <div class="btn-price-outer">
+              <b>₹18</b>
+              <button>ADD</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>  
 </body>
 </html>
