--- a/index.html
+++ b/index.html
@@ -391,7 +391,8 @@
         </p>
       </div>
       <div class="productcontent">
-        <h3>Bisleri Packaged Water</h3>
+        <h3>Bisleri Packaged Water
+        (10 ltr)</h3>
         <p>10 ltr</p>
         <div class="btn-price-outer">
           <b>₹107</b>
@@ -442,7 +443,8 @@
         </p>
       </div>
       <div class="productcontent">
-        <h3>Bisleri Packaged Water (1 l)</h3>
+        <h3>Bisleri Packaged Water
+        (1 ltr)</h3>
         <p>1 ltr</p>
         <div class="btn-price-outer">
           <b>₹18</b>
@@ -462,102 +464,103 @@
       <div class="productrow">
         <div class="product_items">
           <div class="product_img">
-            <img src="/images/e142d3d3-99fd-4f7b-a778-91875ae3ff72.png" width="80%" />
+            <img src="/images/84af17fc-39fd-44f8-ab89-69cc2bd6c2a6.png" width="80%" />
             <p>
               <img src="/images/15-mins.png" width="15px" />
               20 mins
             </p>
           </div>
           <div class="productcontent">
-            <h3>Mother Dairy Tadka Salted Buttermilk</h3>
-            <p>270 ml</p>
+            <h3>Alpenliebe Juzt Jelly - Strawberry Flavour Jelly Candy</h3>
+            <p>140 g</p>
             <div class="btn-price-outer">
-              <b>₹10</b>
+              <b>₹51</b>
               <button>ADD</button>
             </div>
           </div>
         </div>
         <div class="product_items">
           <div class="product_img">
-            <img src="/images/6834c88e-a97d-44cc-8c41-273f5f39c5eb.png" width="80%" />
+            <img src="/images/12822984-7022-44ea-9975-61892ee10652.png" width="80%" />
             <p>
               <img src="/images/15-mins.png" width="15px" />
               20 mins
             </p>
           </div>
           <div class="productcontent">
-            <h3>Coca-Cola Soft Drink (750 ml)</h3>
-            <p>750 ml</p>
+            <h3>Chupa Chups Sour Bites Mixed Fruit Candy</h3>
+            <p>61.6 g</p>
             <div class="btn-price-outer">
-              <b>₹40</b>
+              <b>₹34</b>
               <button>ADD</button>
             </div>
           </div>
         </div>
         <div class="product_items">
           <div class="product_img">
-            <img src="/images/5e11f284-6d96-4928-a07d-0860fce03c8e.png" width="80%" />
+            <img src="/images/4f10d180-8987-4870-9c5a-04635e58005b.png" width="80%" />
             <p>
               <img src="/images/15-mins.png" width="15px" />
               20 mins
             </p>
           </div>
           <div class="productcontent">
-            <h3>Bisleri Packaged Water</h3>
-            <p>10 ltr</p>
+            <h3>Happydent Wave Sugarfree Mint Chewing Gum 18 Pcs</h3>
+            <p>28.8 g</p>
             <div class="btn-price-outer">
-              <b>₹107</b>
+              <b>₹41</b>
               <button>ADD</button>
             </div>
           </div>
         </div>
         <div class="product_items">
           <div class="product_img">
-            <img src="/images/50fff979-bb8f-455a-a3a6-cf1305b18700.png" width="80%" />
+            <img src="/images/ced86243-43f2-4939-8af9-98f8dd7be6ca.png" width="80%" />
             <p>
               <img src="/images/15-mins.png" width="15px" />
               20 mins
             </p>
           </div>
           <div class="productcontent">
-            <h3>Limca Lemon 'N' Lime Soft Drink</h3>
-            <p>750 ml</p>
+            <h3>Alpenliebe Grande with Choco Delight Toffee Pack</h3>
+            <p>120 g</p>
             <div class="btn-price-outer">
-              <b>₹40</b>
+              <b>₹45</b>
               <button>ADD</button>
             </div>
           </div>
         </div>
         <div class="product_items">
           <div class="product_img">
-            <img src="/images/6771100f-3fad-40fb-80ff-4781de705832.png" width="80%" />
+            <img src="/images/de6cc2fb-de87-4112-a89e-cf7c263e2e3e.png" width="80%" />
             <p>
               <img src="/images/15-mins.png" width="15px" />
               20 mins
             </p>
           </div>
           <div class="productcontent">
-            <h3>Coca-Cola Diet Coke Soft Drink</h3>
-            <p>300 ml</p>
+            <h3>GO DESI Tangy Imli Desi Popz Lollipop Candy</h3>
+            <p>1 pack (8 pieces)</p>
             <div class="btn-price-outer">
-              <b>₹40</b>
+              <b>₹50</b>
               <button>ADD</button>
             </div>
           </div>
         </div>
         <div class="product_items">
           <div class="product_img">
-            <img src="/images/2faf253a-7e5b-4d53-9774-350add8d50b5.png" width="80%" />
+            <img src="/images/498246b3-ac58-4001-8b0f-4498d01bfd2d.png" width="80%" />
             <p>
               <img src="/images/15-mins.png" width="15px" />
               20 mins
             </p>
           </div>
           <div class="productcontent">
-            <h3>Bisleri Packaged Water (1 l)</h3>
-            <p>1 ltr</p>
+            <h3>Kopiko Cappuccino Candy - Family Pack
+            (140g)</h3>
+            <p>140 g</p>
             <div class="btn-price-outer">
-              <b>₹18</b>
+              <b>₹44</b>
               <button>ADD</button>
             </div>
           </div>
@@ -565,5 +568,118 @@
       </div>
     </div>
   </section>  
+  <section>
+    <div class="product_section">
+      <div class="headingrow">
+        <h2>Mouth fresheners</h2>
+        <a>see all</a>
+      </div>
+      <div class="productrow">
+        <div class="product_items">
+          <div class="product_img">
+            <img src="/images/84af17fc-39fd-44f8-ab89-69cc2bd6c2a6.png" width="80%" />
+            <p>
+              <img src="/images/15-mins.png" width="15px" />
+              20 mins
+            </p>
+          </div>
+          <div class="productcontent">
+            <h3>Alpenliebe Juzt Jelly - Strawberry Flavour Jelly Candy</h3>
+            <p>140 g</p>
+            <div class="btn-price-outer">
+              <b>₹51</b>
+              <button>ADD</button>
+            </div>
+          </div>
+        </div>
+        <div class="product_items">
+          <div class="product_img">
+            <img src="/images/12822984-7022-44ea-9975-61892ee10652.png" width="80%" />
+            <p>
+              <img src="/images/15-mins.png" width="15px" />
+              20 mins
+            </p>
+          </div>
+          <div class="productcontent">
+            <h3>Chupa Chups Sour Bites Mixed Fruit Candy</h3>
+            <p>61.6 g</p>
+            <div class="btn-price-outer">
+              <b>₹34</b>
+              <button>ADD</button>
+            </div>
+          </div>
+        </div>
+        <div class="product_items">
+          <div class="product_img">
+            <img src="/images/4f10d180-8987-4870-9c5a-04635e58005b.png" width="80%" />
+            <p>
+              <img src="/images/15-mins.png" width="15px" />
+              20 mins
+            </p>
+          </div>
+          <div class="productcontent">
+            <h3>Happydent Wave Sugarfree Mint Chewing Gum 18 Pcs</h3>
+            <p>28.8 g</p>
+            <div class="btn-price-outer">
+              <b>₹41</b>
+              <button>ADD</button>
+            </div>
+          </div>
+        </div>
+        <div class="product_items">
+          <div class="product_img">
+            <img src="/images/ced86243-43f2-4939-8af9-98f8dd7be6ca.png" width="80%" />
+            <p>
+              <img src="/images/15-mins.png" width="15px" />
+              20 mins
+            </p>
+          </div>
+          <div class="productcontent">
+            <h3>Alpenliebe Grande with Choco Delight Toffee Pack</h3>
+            <p>120 g</p>
+            <div class="btn-price-outer">
+              <b>₹45</b>
+              <button>ADD</button>
+            </div>
+          </div>
+        </div>
+        <div class="product_items">
+          <div class="product_img">
+            <img src="/images/de6cc2fb-de87-4112-a89e-cf7c263e2e3e.png" width="80%" />
+            <p>
+              <img src="/images/15-mins.png" width="15px" />
+              20 mins
+            </p>
+          </div>
+          <div class="productcontent">
+            <h3>GO DESI Tangy Imli Desi Popz Lollipop Candy</h3>
+            <p>1 pack (8 pieces)</p>
+            <div class="btn-price-outer">
+              <b>₹50</b>
+              <button>ADD</button>
+            </div>
+          </div>
+        </div>
+        <div class="product_items">
+          <div class="product_img">
+            <img src="/images/498246b3-ac58-4001-8b0f-4498d01bfd2d.png" width="80%" />
+            <p>
+              <img src="/images/15-mins.png" width="15px" />
+              20 mins
+            </p>
+          </div>
+          <div class="productcontent">
+            <h3>Kopiko Cappuccino Candy - Family Pack
+            (140g)</h3>
+            <p>140 g</p>
+            <div class="btn-price-outer">
+              <b>₹44</b>
+              <button>ADD</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>    
 </body>
 </html>
