--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         <img src="/images/Slice-18.png"/>  
       </div>
       <div class="category_items">
-        <img src="/images/Slice-19.png" id="image"/>
+        <img src="/images/Slice-19.png"/>
       </div>
       <div class="category_items">
         <img src="/images/Slice-20.png" id="image"/>
@@ -577,109 +577,119 @@
       <div class="productrow">
         <div class="product_items">
           <div class="product_img">
-            <img src="/images/84af17fc-39fd-44f8-ab89-69cc2bd6c2a6.png" width="80%" />
+            <img src="/images/a8b16dad-42a4-4f24-b5c9-13fb0ca62492.png" width="80%" />
             <p>
               <img src="/images/15-mins.png" width="15px" />
               20 mins
             </p>
           </div>
           <div class="productcontent">
-            <h3>Alpenliebe Juzt Jelly - Strawberry Flavour Jelly Candy</h3>
-            <p>140 g</p>
+            <h3>GO DESI Meetha Paan Desi Mints
+            (60g)</h3>
+            <p>60 g</p>
             <div class="btn-price-outer">
-              <b>₹51</b>
+              <b>₹80</b>
               <button>ADD</button>
             </div>
           </div>
         </div>
         <div class="product_items">
           <div class="product_img">
-            <img src="/images/12822984-7022-44ea-9975-61892ee10652.png" width="80%" />
+            <img src="/images/42adad2f-205f-4af1-b787-b8f3484bdb4e.png" width="80%" />
             <p>
               <img src="/images/15-mins.png" width="15px" />
               20 mins
             </p>
           </div>
           <div class="productcontent">
-            <h3>Chupa Chups Sour Bites Mixed Fruit Candy</h3>
-            <p>61.6 g</p>
+            <h3>Chandan Star 5 in 1 Mouth Freshener
+            (200g)</h3>
+            <p>200 g</p>
             <div class="btn-price-outer">
-              <b>₹34</b>
+              <b>₹174</b>
               <button>ADD</button>
             </div>
           </div>
         </div>
         <div class="product_items">
           <div class="product_img">
-            <img src="/images/4f10d180-8987-4870-9c5a-04635e58005b.png" width="80%" />
+            <img src="/images/feff0546-bbcd-40c6-b710-cc93dff833d4.png" width="80%" />
             <p>
               <img src="/images/15-mins.png" width="15px" />
               20 mins
             </p>
           </div>
           <div class="productcontent">
-            <h3>Happydent Wave Sugarfree Mint Chewing Gum 18 Pcs</h3>
-            <p>28.8 g</p>
+            <h3>Mr. Merchant Banarasi Paan Mouth Freshener</h3>
+            <p>300 g</p>
             <div class="btn-price-outer">
-              <b>₹41</b>
+              <b>₹265</b>
               <button>ADD</button>
             </div>
           </div>
         </div>
         <div class="product_items">
           <div class="product_img">
-            <img src="/images/ced86243-43f2-4939-8af9-98f8dd7be6ca.png" width="80%" />
+            <img src="/images/af735b6d-60f3-4a46-999f-460c2d8daaa2.png" width="80%" />
             <p>
               <img src="/images/15-mins.png" width="15px" />
               20 mins
             </p>
           </div>
           <div class="productcontent">
-            <h3>Alpenliebe Grande with Choco Delight Toffee Pack</h3>
-            <p>120 g</p>
+            <h3>Trident Original Flavour Gum (Sugar Free)</h3>
+            <p>1 pack (14 pieces)</p>
             <div class="btn-price-outer">
-              <b>₹45</b>
+              <b>₹142</b>
               <button>ADD</button>
             </div>
           </div>
         </div>
         <div class="product_items">
           <div class="product_img">
-            <img src="/images/de6cc2fb-de87-4112-a89e-cf7c263e2e3e.png" width="80%" />
+            <img src="/images/61e21313-bdbc-4d60-a3a3-1e6ebf60a1f8.png" width="80%" />
             <p>
               <img src="/images/15-mins.png" width="15px" />
               20 mins
             </p>
           </div>
           <div class="productcontent">
-            <h3>GO DESI Tangy Imli Desi Popz Lollipop Candy</h3>
-            <p>1 pack (8 pieces)</p>
+            <h3>SURILI Aam Papad Mukhvas Mouth Freshener</h3>
+            <p>200 g</p>
             <div class="btn-price-outer">
-              <b>₹50</b>
+              <b>₹207</b>
               <button>ADD</button>
             </div>
           </div>
         </div>
         <div class="product_items">
           <div class="product_img">
-            <img src="/images/498246b3-ac58-4001-8b0f-4498d01bfd2d.png" width="80%" />
+            <img src="/images/6e295473-6bfd-4ad6-b0e3-ffd993167ec9.png" width="80%" />
             <p>
               <img src="/images/15-mins.png" width="15px" />
               20 mins
             </p>
           </div>
           <div class="productcontent">
-            <h3>Kopiko Cappuccino Candy - Family Pack
-            (140g)</h3>
-            <p>140 g</p>
+            <h3>SURILI Calcutta Meetha Pan with Rose extact</h3>
+            <p>200 g</p>
             <div class="btn-price-outer">
-              <b>₹44</b>
+              <b>₹234</b>
               <button>ADD</button>
             </div>
           </div>
         </div>
       </div>
     </div>
-  </section>    
+  </section>  
+  <footer>
+    <div class="footer_phn">
+      <div class="footer_phn_row1">
+        <img src="">
+      </div>
+      <div class="footer_phn_row2"></div>
+      <div class="footer_phn_row3"></div>      
+    </div>
+  </footer>
 </body>
 </html>
