--- a/index.html
+++ b/index.html
@@ -684,12 +684,138 @@
   </section>  
   <footer>
     <div class="footer_phn">
-      <div class="footer_phn_row1">
-        <img src="">
+    <div class="footer_1">
+      <div class="part-1">
+        <img src="/images/1718624389849-Household-cleaning-essentials-KVI-slice-top.jpeg"/>
       </div>
-      <div class="footer_phn_row2"></div>
-      <div class="footer_phn_row3"></div>      
+      <div class="part-2">
+        <div class="part-2-items">
+          <img src="/images/1718624426915-Surface-Cleaners-Fresheners.jpeg"/>
+          <h3>Surface <br/> Cleaners</h3>
+        </div>
+        <div class="part-2-items">
+          <img src="/images/1718624437262-Cleaning-Tools-Accessories.jpeg"/>  
+          <h3>Cleaning <br/> Tools</h3>
+        </div>
+        <div class="part-2-items">
+          <img src="/images/1718624445022-Trash-Disposal.jpeg"/>  
+          <h3>Trash <br/> Disposal</h3>  
+        </div>   
+        <div class="part-2-items">
+          <img src="/images/1718624452674-Smart-Cleaning-Gadgets.jpeg"/>
+          <h3>Cleaning <br/> Gadgets</h3>
+        </div>        
+      </div>
+    </div>
+    <div class="footer_2">
+      <img src="/images/Bottom-01-1.png"/>
+    </div>
+    <div class="footer_3">
+      <span class="Description">
+      <p>India's last minute app - blinkit</p>
+        </span>
+      <span class="plus-sign">
+        <p>+</p>        
+      </span>
+    </div>
+    </div>
+    
+    <div class="footer_web">
+      <div class="footer_web_row1">
+        <div class="footer_web_row1_left">
+          <h3>Useful Links</h3>
+          <div class="useful_links">
+            <ul>
+              <li>
+                <a href="">Blog</a>
+                <a href="">Privacy</a>
+                <a href="">Terms</a>
+                <a href="">FAQs</a>
+                <a href="">Security</a>
+                <a href="">Contact</a>
+              </li>
+            </ul>
+            <ul>
+              <li>
+                <a href="">Partner</a>
+                <a href="">Franchise</a>
+                <a href="">Seller</a>
+                <a href="">Warehouse</a>
+                <a href="">Deliver</a>
+                <a href="">Resources</a>
+              </li>
+            </ul>  
+            <ul>
+              <li>
+                <a href="">Recipes</a>
+                <a href="">Bistro</a>
+                <a href="">District</a>
+              </li>
+            </ul>            
+          </div>
+        </div>
+        <div class="footer_web_row1_right">
+          <div class="categoriesheading">
+            <h3>Categories</h3>
+            <a href="">see all</a>
+            </div>
+            <div class="categories_links">
+              <ul>
+                <li>
+                  <a href="">Vegetables & Fruits</a>
+                  <a href="">Cold Drinks & Juices</a>
+                  <a href="">Bakery & Biscuits</a>
+                  <a href="">Dry Fruits,Masala & oil</a>
+                  <a href="">Paan Corner</a>
+                  <a href="">Pharma & Wellness</a>
+                  <a href="">Personal Care</a>
+                  <a href="">Magazines</a>
+                  <a href="">Electronic & Electricals</a>
+                  <a href="">Toys & Games</a>
+                  <a href="">Rakhi Gifts</a>
+                </li>
+                </ul>
+              <ul>
+                <li>
+                  <a href="">Dairy & Breakfast</a>
+                  <a href="">Instant & Frozen Food</a>
+                  <a href="">Sweet Tooth</a>
+                  <a href="">Sauces & Spreads</a>
+                  <a href="">Organic & Premium</a>
+                  <a href="">Cleaning Essentials</a>
+                  <a href="">Pet Care</a>
+                  <a href="">Kitchen & Dining</a>
+                  <a href="">Stationery Needs</a>
+                  <a href="">Print Store</a>
+                  <a href="">Munchies</a>
+                </li>
+                </ul>
+              <ul>
+                <li>
+                  <a href="">Tea, Coffee & Health Drinks</a>
+                  <a href="">Atta, Rice & Dal</a>
+                  <a href="">Chicken, Meat & Fish</a>
+                  <a href="">Baby Care</a>
+                  <a href="">Home & Office</a>
+                  <a href="">Beauty & Cosmetics</a>
+                  <a href="">Fashion & Accessories</a>
+                  <a href="">Books</a>
+                  <a href="">E-Gift Cards</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+      </div>
+      <div class="footer_web_row2">
+        <p>© Blink Commerce Private Limited, 2016-2025</p>
+        <div>
+        <h5>Download App</h5>
+        </div>
+      </div>
+      <div class="footer_web_row3">
+        <p>“Blinkit” is owned & managed by "Blink Commerce Private Limited" and is not related, linked or interconnected in whatsoever manner or nature, to “GROFFR.COM” which is a real estate services business operated by “Redstone Consultancy Services Private Limited”.</p>
+      </div>
     </div>
   </footer>
 </body>
-</html>
+</html> 
