--- a/index.html
+++ b/index.html
@@ -719,7 +719,6 @@
       </span>
     </div>
     </div>
-    
     <div class="footer_web">
       <div class="footer_web_row1">
         <div class="footer_web_row1_left">
@@ -808,8 +807,17 @@
       </div>
       <div class="footer_web_row2">
         <p>© Blink Commerce Private Limited, 2016-2025</p>
-        <div>
+        <div class="app_icons">
         <h5>Download App</h5>
+        <img src="/images/d61019073b700ca49d22.png" width="100px"/>
+        <img src="/images/8ed033800ea38f24c4f0.png" width="100px"/>        
+        </div>
+        <div class="slinks">
+          <i class="fa-brands fa-facebook-f"></i>
+          <i class="fa-brands fa-x-twitter"></i>          
+          <i class="fa-brands fa-instagram"></i>
+          <i class="fa-brands fa-linkedin-in"></i>
+          <i class="fa-brands fa-threads"></i>
         </div>
       </div>
       <div class="footer_web_row3">
